syntax = "proto3";

option go_package = "event";

import "google/protobuf/timestamp.proto";

message EventPb {
  enum Action {
    ACTION_UNSPECIFIED = 0;
	  CREATE_WORK = 1;
	  UPDATE_WORK = 2;
	  DELETE_WORK = 3;
	  START_WORK = 4;
	  PAUSE_WORK = 5;
	  RESUME_WORK = 6;
	  FINISH_WORK = 7;
	  CANCEL_FINISH_WORK = 8;
  }

  string id = 1;
  string prev_id = 2;
  string user_id = 3;
  string work_id = 4;
  Action action = 5;
  string title = 6;
  google.protobuf.Timestamp time = 7;
  google.protobuf.Timestamp created_at = 8;
}

